[gd_scene load_steps=16 format=3 uid="uid://cbcqlr8pi2k0d"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_r3q2p"]
[ext_resource type="Texture2D" uid="uid://bbffiejglmjnw" path="res://witch.png" id="2_8ti0p"]
[ext_resource type="Script" path="res://Scenes/EnemySpawn.gd" id="3_fwayu"]
[ext_resource type="Texture2D" uid="uid://cr2hcjs2jlss5" path="res://pixil-frame-0(3).png" id="4_e7025"]
[ext_resource type="AudioStream" uid="uid://b7srcyvcytuv2" path="res://laserShoot(1).wav" id="5_g3s37"]
[ext_resource type="AudioStream" uid="uid://cshlvyp3nn0fd" path="res://hitHurt(1).wav" id="6_nr2wi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cjwyf"]
radius = 48.1664

[sub_resource type="AtlasTexture" id="AtlasTexture_g55ij"]
atlas = ExtResource("2_8ti0p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tqdp"]
atlas = ExtResource("2_8ti0p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18egs"]
atlas = ExtResource("2_8ti0p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o8wqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g55ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tqdp")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g55ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18egs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tqdp")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b4cu7"]
radius = 64.1249

[sub_resource type="CircleShape2D" id="CircleShape2D_5bh66"]
radius = 64.1249

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5udnm"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jm046"]
bg_color = Color(0.196078, 0.588235, 0.196078, 1)

[node name="Main" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(960, 540)
script = ExtResource("1_r3q2p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_cjwyf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(-1.52588e-05, 3.99999)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_o8wqd")
animation = &"Idle"
frame_progress = 0.342016

[node name="Area2D" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("CircleShape2D_b4cu7")

[node name="powerupdetect" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/powerupdetect"]
shape = SubResource("CircleShape2D_5bh66")

[node name="EnemySpawn" type="Node" parent="."]
script = ExtResource("3_fwayu")

[node name="EnemyCountdown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(4, 4)
texture = ExtResource("4_e7025")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = 16.0
offset_top = 16.0
offset_right = 656.0
offset_bottom = 144.0
theme_override_styles/background = SubResource("StyleBoxFlat_5udnm")
theme_override_styles/fill = SubResource("StyleBoxFlat_jm046")
max_value = 5.0
value = 4.0
show_percentage = false

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g3s37")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nr2wi")

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Player/powerupdetect" to="Player" method="_on_powerupdetect_body_entered"]
[connection signal="timeout" from="EnemyCountdown" to="EnemySpawn" method="_on_enemy_countdown_timeout"]
